--- a/src/TestPage.css
+++ b/src/TestPage.css
@@ -24,7 +24,7 @@
 }
 .testbody {
   /* border: 2px solid red; */
-  height: 86vh;
+  height: 80vh;
   overflow-y: auto;
 }
 .footer {
@@ -126,4 +126,26 @@
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
     0 17px 50px 0 rgba(0, 0, 0, 0.19);
   background-color: rgba(0, 121, 121, 0.692);
+}
+.top {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 2vw;
+  height: 6vh;
+  /* border: 2px solid black; */
+}
+.endtest {
+  margin-top: 2vh;
+  height: 5vh;
+  width: 8vw;
+  color: white;
+  font-weight: bold;
+  background-color: rgb(250, 31, 31);
+  border: 1px solid white;
+  border-radius: 5px;
+}
+.endtest:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  background-color: rgba(209, 8, 8, 0.692);
 }
